Prevent browser overflow
Add overflow: hidden to body in order to prevent overflow when dragging the image to the edge of the window

--- a/css/base.css
+++ b/css/base.css
@@ -24,6 +24,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	line-height: 1;
+	overflow: hidden;
 }
 
 .demo-1 {
